src/test/ui/unboxed-closures/unboxed-closure-sugar-wrong-number-number-type-parameters-3.stderr
error[E0243]: wrong number of type arguments: expected 3, found 1
  --> $DIR/unboxed-closure-sugar-wrong-number-number-type-parameters-3.rs:15:12
   |
LL | fn foo(_: &Three())
   |            ^^^^^^^ expected 3 type arguments

error[E0220]: associated type `Output` not found for `Three<(), [type error], [type error]>`
  --> $DIR/unboxed-closure-sugar-wrong-number-number-type-parameters-3.rs:15:17
   |
LL | fn foo(_: &Three())
   |                 ^^ associated type `Output` not found

error: aborting due to 2 previous errors

Some errors occurred: E0220, E0243.
For more information about an error, try `rustc --explain E0220`.
